extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.application.name=communityLanglang
 # 应用服务 WEB 访问端口
 server.port=8887
 
+github.client.id=f2cee90157f54ed6cd7f
+github.client.secret=afdc38d8e12a6b5a0c5efe8d6aea6efe649ff966
+github.redirect.uri=http://localhost:8887/callback
 
