--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ github.client.id=f2cee90157f54ed6cd7f
 github.client.secret=afdc38d8e12a6b5a0c5efe8d6aea6efe649ff966
 github.redirect.uri=http://localhost:8887/callback
 
+spring.datasource.url=jdbc:h2:D:/IdeaProjects/communityLanglang;
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
+spring.flyway.baselineOnMigrate = true
