--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,21 @@ spring.application.name=communityLanglang
 server.port=8887
 
 github.client.id=f2cee90157f54ed6cd7f
-github.client.secret=afdc38d8e12a6b5a0c5efe8d6aea6efe649ff966
+github.client.secret=4ced0ab4723c757c0afa4286466212fc0a19369e
 github.redirect.uri=http://localhost:8887/callback
 
+ucloud.us3.public-key=TOKEN_05b1a2c1-b244-49ad-b343-301f0b0f435e
+ucloud.us3.private-key=58890606-a702-4f01-ab8a-8df1ffa38998
+ucloud.us3.bucket-name=langlang
+ucloud.us3.region=cn-bj
+ucloud.us3.proxySuffix=ufileos.com
+ucloud.us3.expires=315360000
 spring.datasource.url=jdbc:h2:D:/IdeaProjects/communityLanglang;
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
 spring.flyway.baselineOnMigrate = true
+mybatis.configuration.mapUnderscoreToCamelCase=true
+spring.jpa.show-sql=true
+mybatis.type-aliases-package=life.langlang.commmunity.communitylanglang.model
+mybatis.mapper-locations=classpath:mapper/*.xml
